# pyspark-score-tutorial

./: .gitignore  Pipfile  README.md  age-pred.ipynb  pyproject.toml  setup.sh  slides.pptx  spark2pandas.ipynb
.devcontainer/: Dockerfile
