[project]
name = "pyspark-score-tutorial"
version = "0.1.0"
description = "PySpark scoring tutorial and examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter",
    "scikit-learn",
    "numpy",
    "pandas",
    "matplotlib",
    "pyspark>3",
    "pyarrow",
    "spark-pipeline",
]

[dependency-groups]
dev = [
    "pylint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] 
